<resources>
    <string name="app_name">TFSmsg</string>

    <string name="menu_dialogs">Диалоги</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_about">О приложении</string>
    <string name="menu_exit">Выход</string>

    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>

    <string name="about">о приложении</string>

    <string name="pref_about_app_title">О приложении</string>
    <string name="pref_app_name_title">Название приложения</string>
    <string name="pref_version_title">Версия приложения</string>
    <string name="pref_developer_title">Разработчик</string>
    <string name="pref_courses_title">Школа разработки</string>
    <string name="pref_version_summary">1.0</string>
    <string name="pref_dev_name_summary">Игорь Дубровин</string>
    <string name="pref_courses_name_summary">Tinkoff Fintech School</string>

    <string name="enter_message">Введите сообщение</string>
    <string name="smile">smile</string>
    <string name="send">send</string>
    <string name="clear">clear</string>

    <string name="transition_name_title_dialog">transition:Title</string>
</resources>
