<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_root_tv"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_app_name_summary"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/app_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_name_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:text="@string/pref_app_name_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_app_name_summary"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_course_name_summary"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/pref_courses_name_summary"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_version_summary"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_courses_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pref_courses_title"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_version_title"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_course_name_summary"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/tv_dev_name_summary"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:text="@string/pref_dev_name_summary"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_course_name_summary" />

        <TextView
            android:id="@+id/tv_developer_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="8dp"
            android:text="@string/pref_developer_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_dev_name_summary"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_courses_title" />

        <TextView
            android:id="@+id/tv_version_summary"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:text="@string/pref_version_summary"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_name_summary" />

        <TextView
            android:id="@+id/tv_version_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:text="@string/pref_version_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_version_summary"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_name_title" />
    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:id="@+id/scene_container_about_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_root_tv">

        <include layout="@layout/scene_about_many_images"/>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
