<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/editor_background"
    android:layout_gravity="bottom"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <com.igordubrovin.tfsmsg.customView.EditText
        android:id="@+id/edit_text_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_message_editor"
        android:maxHeight="@dimen/max_height_text_message_editor"
        android:minHeight="@dimen/min_height_text_message_editor"
        android:layout_weight="1"
        android:gravity="bottom"
        android:paddingBottom="@dimen/padding_vertical_text_message_editor"
        android:paddingTop="@dimen/padding_vertical_text_message_editor"
        android:layout_marginTop="@dimen/margin_vertical_text_message_editor"
        android:textSize="@dimen/text_size_message"
        android:imeOptions="flagNoExtractUi"
        android:background="@android:color/white"
        android:autoLink="web|phone|map|email"
        android:hint="@string/enter_message"/>

    <ImageView
        android:id="@+id/image_view_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:visibility="invisible"
        android:layout_marginBottom="@dimen/margin_vertical_imageView_message_editor"
        android:layout_marginEnd="@dimen/margin_right_message_editor"
        android:layout_marginRight="@dimen/margin_right_message_editor"
        android:layout_marginLeft="@dimen/margin_left_message_editor"
        android:layout_marginStart="@dimen/margin_left_message_editor"
        android:src="@drawable/ic_clear_material_color_accent"
        android:contentDescription="@string/clear" />

    <ImageView
        android:id="@+id/image_view_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="@dimen/margin_vertical_imageView_message_editor"
        android:layout_marginEnd="@dimen/margin_right_message_editor"
        android:layout_marginRight="@dimen/margin_right_message_editor"
        android:layout_marginLeft="@dimen/margin_left_message_editor"
        android:layout_marginStart="@dimen/margin_left_message_editor"
        android:src="@drawable/ic_send_color_gray"
        android:background="@drawable/image_view_text_editor_ripple"
        android:contentDescription="@string/send" />

</LinearLayout>